-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.8.0-beta
-
None
-
gentoo-linux, custom compiled master
-
79ae5a0f053eba3505efb251e15f269a8e1f6719
Hi,
I have the following problem in FakeVim when "Center cursor on scroll" is enabled in "Text Editor" -> "Display":
The view of the opened file jumps wildly around. While the cursor is on the correct line of the file, it is displayed in the middle of the screen and then again on the bottom/top of the screen.
Unfortunately this does not happen with all files. I could not find a red band between those files. It seems to happen with large files and maybe only with those files that have been opened before.
This is on current master but I'd think it is on 2.8 branch, too.
For Gerrit Dashboard: QTCREATORBUG-9483 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
58217,1 | FakeVim: Scroll only if it's really necessary | 2.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |