FakeVim: Scroll only if it's really necessary

Task-number:QTCREATORBUG-9483
Change-Id: I5836b38fd663aa5471bedd389aa786002791aa6e
Reviewed-by: hjk <hjk121@nokiamail.com>